# WindMill

./: .gitignore  CMakeLists.txt
Projects/CPP/WindMill_CPP_Lib/: CMakeLists.txt
Projects/CPP/WindMill_CPP_Lib/include/WindMill_CPP_Lib/: Lib.h
Projects/CPP/WindMill_CPP_Lib/src/: Lib.cpp
Projects/CPP/WindMill_CPP_Test/: CMakeLists.txt
Projects/CPP/WindMill_CPP_Test/src/: Main.cpp
Projects/CPP/WindMill_Dll/: CMakeLists.txt
Projects/CPP/WindMill_Dll/include/WindMill_Dll/: Defines.h  Lib.h
Projects/CPP/WindMill_Dll/src/: Lib.cpp
